# opencv-mobile

./: CMakeLists.txt  README.md  main.cpp
